# SimpleDimple

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: Policies.cmake
hexpat/: sar1.hexpat
include/sd/io/: SarFile.hpp  SarReader.hpp
include/sd/structs/: ImHexAdapter.hpp  Sar1.hpp
include/sd/util/: FixedString.hpp  FourCC.hpp
src/libsd/: CMakeLists.txt
src/libsd/io/: SarFile.cpp  SarReader.cpp  StreamUtils.cpp  StreamUtils.hpp
src/main/: CMakeLists.txt  CommonDefs.hpp  SdConfig.hpp.in  Utils.cpp  Utils.hpp  main.cpp
src/main/tasks/: ExtractTask.cpp  ExtractTask.hpp  InfoTask.cpp  InfoTask.hpp
